--- a/setup.cfg
+++ b/setup.cfg
@@ -4,9 +4,9 @@
 
 [metadata]
 name = zreion
-description = Add a short description here!
+description = A python-based method for generating cosmological reionization fields
 author = Paul La Plante
-author-email = plaplant@sas.upenn.edu
+author-email = plaplant@berkeley.edu
 license = mit
 long-description = file: README.rst
 long-description-content-type = text/x-rst; charset=UTF-8
@@ -30,7 +30,7 @@ package_dir =
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
 setup_requires = pyscaffold>=3.2a0,<3.3a0
 # Add here dependencies of your project (semicolon/line-separated), e.g.
-install_requires = numpy
+install_requires = numpy; cython; pyfftw
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
