--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ include_package_data = True
 package_dir =
     =src
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
-setup_requires = pyscaffold>=3.2a0,<3.3a0
+setup_requires = pyscaffold>=3.3a0,<4
 # Add here dependencies of your project (semicolon/line-separated), e.g.
 install_requires = numpy; cython; pyfftw
 # The usage of test_requires is discouraged, see `Dependency Management` docs
@@ -109,7 +109,7 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 3.2.3
+version = 3.3.1
 package = zreion
 extensions =
     no_skeleton
