--- a/setup.cfg
+++ b/setup.cfg
@@ -8,8 +8,8 @@ description = A python-based method for generating cosmological reionization fie
 author = Paul La Plante
 author-email = plaplant@berkeley.edu
 license = mit
-long-description = file: README.rst
-long-description-content-type = text/x-rst; charset=UTF-8
+long-description = file: README.md
+long-description-content-type = text/x-md; charset=UTF-8
 url = https://github.com/pyscaffold/pyscaffold/
 project-urls =
     Documentation = https://pyscaffold.org/
@@ -34,7 +34,7 @@ install_requires = numpy; cython; pyfftw
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
-# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
+python_requires = >=3.6
 
 [options.packages.find]
 where = src
