--- a/setup.cfg
+++ b/setup.cfg
@@ -100,12 +100,15 @@ formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
+ignore = W503, E203
+max-line-length = 88
 exclude =
     .tox
     build
     dist
     .eggs
     docs/conf.py
+docstring-convention = numpy
 
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
