--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -4,10 +4,15 @@ on: [push, pull_request]
 jobs:
   tests:
     name: Run Tests
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        os: [ubuntu-latest]
         python-version: [3.6, 3.7, 3.8]
+
+    env:
+      OS: ${{ matrix.os }}
+      PYTHON: ${{ matrix.python-version }}
 
     steps:
     - uses: actions/checkout@v2
@@ -19,10 +24,17 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[testing]
-    - name: Linting
+    - name: Use pre-commit to lint files
       run: |
         pip install pre-commit
         pre-commit run -a
-    - name: Testing
+    - name: Run tests using pytest
       run: |
-        pytest
+        pytest --cov=./ --cov-report=xml:./coverage.xml
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        files: ./coverage.xml
+        flags: unittests
+        env_vars: OS,PYTHON
+        verbose: true
