--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -23,14 +23,14 @@ jobs:
     - name: Install Package
       run: |
         python -m pip install --upgrade pip
-        pip install .[testing]
+        pip install -e .[testing]
     - name: Use pre-commit to lint files
       run: |
         pip install pre-commit
         pre-commit run -a
     - name: Run tests using pytest
       run: |
-        pytest --cov=./ --cov-report=xml:./coverage.xml
+        pytest --cov-report xml:./coverage.xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
