Use oldest-supported-numpy in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "Cython", "numpy"]
+requires = ["setuptools", "wheel", "Cython", "oldest-supported-numpy"]
 build-backend = "setuptools.build_meta"
 
 [tool.black]
