--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
-  - repo: git://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.3.0
     hooks:
       - id: trailing-whitespace
       - id: check-added-large-files
@@ -14,7 +14,7 @@ repos:
       - id: mixed-line-ending
         args: ['--fix=no']
   - repo: https://gitlab.com/pycqa/flake8
-    rev: '3.7.9'
+    rev: '3.9.2'
     hooks:
       - id: flake8
         additional_dependencies:
@@ -26,6 +26,6 @@ repos:
           - pep8-naming
 
   - repo: https://github.com/psf/black
-    rev: 19.10b0
+    rev: 22.3.0
     hooks:
       - id: black
