--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
 
     env:
       OS: ${{ matrix.os }}
@@ -24,10 +24,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -e .[testing]
-    - name: Use pre-commit to lint files
-      run: |
-        pip install pre-commit
-        pre-commit run -a
     - name: Run tests using pytest
       run: |
         pytest --cov-report xml:./coverage.xml
