Fix tests for new numpy version release

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,7 @@ exclude =
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
 testing =
+    packaging
     pytest
     pytest-cov
     pytest-cases
