Add CI job to build wheels

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,9 @@ author-email = plaplant@berkeley.edu
 license = mit
 long-description = file: README.md
 long-description-content-type = text/x-md; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/plaplant/zreion
 project-urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://github.com/plaplant/zreion
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
 # Add here all kinds of additional classifiers as defined under
@@ -46,7 +46,7 @@ exclude =
 # `pip install zreion[PDF]` like:
 # PDF = ReportLab; RXP
 # Add here test requirements (semicolon/line-separated)
-testing =
+test =
     packaging
     pytest
     pytest-cov
