--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Install Package
       run: |
         python -m pip install --upgrade pip
-        pip install -e .[testing]
+        pip install -e .[test]
     - name: Run tests using pytest
       run: |
         pytest --cov-report xml:./coverage.xml
