--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build wheels
 
 on: [push, pull_request]
 
@@ -14,8 +14,7 @@ jobs:
           - [macos-10.15, macosx_*]
           - [windows-2019, win_amd64]
           - [windows-2019, win32]
-        python:
-          - ["cp37", "cp38", "cp39", "cp310"]
+        python: ["cp37", "cp38", "cp39", "cp310"]
 
     steps:
       - uses: actions/checkout@v3
