Update project metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,12 @@
 name = zreion
 description = A python-based method for generating cosmological reionization fields
 author = Paul La Plante
-author-email = plaplant@berkeley.edu
+author_email = paul.laplante@unlv.edu
 license = mit
-long-description = file: README.md
-long-description-content-type = text/x-md; charset=UTF-8
+long_description = file: README.md
+long_description_content_type = text/x-md; charset=UTF-8
 url = https://github.com/plaplant/zreion
-project-urls =
+project_urls =
     Documentation = https://github.com/plaplant/zreion
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
