--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -56,7 +56,7 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: atrifact
+          name: artifact
           path: dist
       - uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
