--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -48,6 +48,7 @@ jobs:
 
       - uses: actions/upload-artifact@v3
         with:
+          name: sdist
           path: dist/*.tar.gz
   upload_all:
     needs: [build_wheels, make_sdist]
@@ -56,7 +57,6 @@ jobs:
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: artifact
           path: dist
       - uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
