Fix how artifacts are handled in uploads

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ author = Paul La Plante
 author_email = paul.laplante@unlv.edu
 license = mit
 long_description = file: README.md
-long_description_content_type = text/x-md; charset=UTF-8
+long_description_content_type = text/markdown; charset=UTF-8
 url = https://github.com/plaplant/zreion
 project_urls =
     Documentation = https://github.com/plaplant/zreion
