--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -58,7 +58,16 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           path: dist
-      - uses: pypa/gh-action-pypi-publish@v1.5.0
+      - name: Move folders around
+        working-directory: dist
+        run: |
+          for dir in `ls .`; do
+            cd $dir
+            mv * ..
+            cd ..
+            rmdir $dir
+          done
+      - name: Upload to PyPI
+        uses: pypa/gh-action-pypi-publish@v1.5.0
         with:
-          user: __token__
           password: ${{ secrets.pypi_password }}
